--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -30,7 +30,7 @@
 /**** Regular scss ****/
 
 .project {
-  width: 400px;
+  width: 300px;
   margin: 20px;
   flex-grow: 1;
 }
